# smart-commit

./: .pre-commit-config.yaml  IMPROVEMENTS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: publish.py  release.py
smart_commit/: __init__.py  ai_providers.py  cache.py  cli.py  config.py  mcp.py  repository.py  templates.py  utils.py
smart_commit/analyzers/: __init__.py  commit_splitter.py
tests/: __init__.py  conftest.py  test_ai_providers.py  test_cache.py  test_cli.py  test_config.py  test_repository.py  test_templates.py  test_utils_breaking.py  test_utils_scope.py  test_utils_security.py  test_utils_validation.py
